# ocr-demo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/realcool/ocr_demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/realcool/ocr_demo/: MainActivity.kt
app/src/main/java/realcool/ocr_demo/engine/: OCR.kt  OCRCallback.kt
app/src/main/java/realcool/ocr_demo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/realcool/ocr_demo/utils/: FileUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/realcool/ocr_demo/: ExampleUnitTest.kt
ocr-lib/: build.gradle
ocr-lib/src/main/cpp/: BitmapUtils.cpp  CMakeLists.txt  OcrResultUtils.cpp  OcrUtils.h  main.cpp
ocr-lib/src/main/java/realcool/ocrlib/: OcrEngine.kt  OcrResult.kt
